# dm-helper

./: .gitignore  Cargo.toml  LICENSE  README.md  Secrets.dev.toml.template  Shuttle.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml  docs.yml
migrations/2024-04-03-034927_campaigns/: up.sql
migrations/2024-04-03-034937_characters/: down.sql  up.sql
migrations/2024-04-03-034940_sessions/: up.sql
migrations/2024-04-03-034945_responses/: down.sql  up.sql
migrations/2024-04-03-034949_settings/: up.sql
src/: commands.rs  main.rs  models.rs  ops.rs  responses.rs  schema.rs  structs.rs  utils.rs
src/commands/: dnd.rs  help.rs  settings.rs
src/commands/dnd/: campaign.rs  dice.rs
src/commands/dnd/campaign/: session.rs
src/commands/dnd/campaign/session/: dm-response.rs  dmresponse.rs  response.rs
src/ops/: campaign_ops.rs  response_ops.rs  session_ops.rs  settings_ops.rs
src/utils/: autocompletes.rs  campaigns.rs  checks.rs  date.rs  db.rs  guilds.rs  id.rs  numbers.rs  responses.rs  sessions.rs  settings.rs  staff.rs  users.rs
