[package]
name = "dm-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
serenity = { version = "0.12.0", default-features = false }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
mysql = "*"
chrono = "0.4.31"
rand = "0.8.5"
futures = "*"
