[package]
name = "dm-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
mysql = "*"
chrono = "0.4.31"
rand = "0.8.5"
futures = "*"
shuttle-runtime = "0.43.0"
shuttle-axum = "0.43.0"
shuttle-poise = "0.37.0"
anyhow = "1.0.79"
tracing = "0.1.40"
shuttle-serenity = "0.43.0"
